--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -92,15 +92,15 @@ body button {
   cursor: text;
 }
 
-.darkThinScrollbar::-webkit-scrollbar, body::-webkit-scrollbar, .noneTouchScreen ::-webkit-scrollbar {
+.darkThinScrollbar::-webkit-scrollbar, .notTouchScreen::-webkit-scrollbar, .notTouchScreen ::-webkit-scrollbar {
   width: 7px;
 }
 
-.darkThinScrollbar::-webkit-scrollbar-track, body::-webkit-scrollbar-track, .noneTouchScreen ::-webkit-scrollbar-track {
+.darkThinScrollbar::-webkit-scrollbar-track, .notTouchScreen::-webkit-scrollbar-track, .notTouchScreen ::-webkit-scrollbar-track {
   background: transparent;
 }
 
-.darkThinScrollbar::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb, .noneTouchScreen ::-webkit-scrollbar-thumb {
+.darkThinScrollbar::-webkit-scrollbar-thumb, .notTouchScreen::-webkit-scrollbar-thumb, .notTouchScreen ::-webkit-scrollbar-thumb {
   background: #c4c4c4;
   border-radius: 20px;
 }
@@ -118,64 +118,6 @@ body button {
   border-radius: 20px;
 }
 
-.noneTouchScreen .lightThinScrollbar::-webkit-scrollbar {
-  width: 3px;
-}
-
-.noneTouchScreen .lightThinScrollbar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.noneTouchScreen .lightThinScrollbar::-webkit-scrollbar-thumb {
-  background: #CCC;
-  border-radius: 20px;
-}
-
-.noneTouchScreen .lightThickHiddenScrollbar::-webkit-scrollbar {
-  width: 7px;
-  -webkit-transition: all 200ms;
-  transition: all 200ms;
-}
-
-.noneTouchScreen .lightThickHiddenScrollbar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.noneTouchScreen .lightThickHiddenScrollbar::-webkit-scrollbar-thumb {
-  background-color: transparent;
-  border-radius: 20px;
-}
-
-.noneTouchScreen .lightThickHiddenScrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: #CCC;
-}
-
-.noneTouchScreen .darkThickScrollbar::-webkit-scrollbar {
-  width: 6px;
-}
-
-.noneTouchScreen .darkThickScrollbar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.noneTouchScreen .darkThickScrollbar::-webkit-scrollbar-thumb {
-  background: #C2C2C2;
-  border-radius: 20px;
-}
-
-.noneTouchScreen .darkSuperThinScrollbar::-webkit-scrollbar {
-  width: 1px;
-}
-
-.noneTouchScreen .darkSuperThinScrollbar::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-.noneTouchScreen .darkSuperThinScrollbar::-webkit-scrollbar-thumb {
-  background: #BBB;
-  border-radius: 20px;
-}
-
 .noScrollbar::-webkit-scrollbar {
   width: 0;
 }
@@ -183,17 +125,13 @@ body button {
 .customRange {
   width: 100%;
   -webkit-appearance: none;
-  /* Hides the slider so that custom slider can be made */
   width: 100%;
-  /* Specific width is required for Firefox. */
   background: transparent;
-  /* Otherwise white in Chrome */
   border: none;
 }
 
 .customRange:focus {
   outline: none;
-  /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
 }
 
 .customRange::-webkit-slider-thumb {
@@ -274,16 +212,25 @@ body button {
 }
 
 html {
+  width: 100%;
+  height: 100%;
   font-size: 0.625rem;
 }
 
 body {
+  width: 100%;
+  height: 100%;
   direction: ltr;
   background-color: white;
   font-family: Ubuntu_Regular, serif;
   text-align: start;
   cursor: default;
   margin: 0;
+}
+
+body > #root {
+  width: 100%;
+  height: 100%;
 }
 
 body * {
