--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -3,17 +3,24 @@
 @import "classes";
 
 html{
+    width: 100%;
+    height: 100%;
     font-size: 0.625rem;
 }
 
 body{
+    width: 100%;
+    height: 100%;
     direction:ltr;
     background-color: white;
     font-family: Ubuntu_Regular, serif;
     text-align: start;
     cursor:default;
     margin: 0;
-    @extend .darkThinScrollbar;
+    > #root{
+        width: 100%;
+        height: 100%;
+    }
     *{
         box-sizing: border-box;
     }
@@ -49,12 +56,5 @@ body{
     input[type="button"],
     button{
         @extend .notSelectable;
-    }
-}
-
-//noneTouchScreen
-.noneTouchScreen{
-    *{
-        @extend .darkThinScrollbar;
     }
 }
