--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,162 +1,186 @@
 @import "mixin";
-@import "classes";
 
 .App{
     width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    overflow: auto;
     > .window{
         width: 100%;
-        max-width: 1950px;
-        height: 100%;
-        max-height: 900px;
-        padding: 60px 90px;
-        overflow: auto;
+        max-width: 1650px;
+        height: fit-content;
+        padding: 60px 105px 40px 115px;
         display: flex;
-        flex-wrap: wrap;
-        gap: 90px;
-        @extend .darkThinScrollbar;
-        > .headerFormWrapper{
+        gap: 110px;
+        > .main{
+            width: 100%;
             flex: 1;
+            display: flex;
+            flex-direction: column;
+            > .headerWrapper{
+                width: calc(100% + 110px + 600px);
+            }
+            > .formWrapper{
+                flex: 1;
+                margin-top: 30px;
+            }
         }
         > .infoWrapper{
-            width: 480px;//checkIt
-        }
-    }
-}
-
-//responsive design:
-@media only screen and (min-width: 1450px){
-    .App{
-        > .window{
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            @include transform(-50%, -50%);
-        }
-    }
-}
-
-@media only screen and (max-width: 1800px){
-    .App{
-        > .window{
-            padding-left: 80px;
-            padding-right: 65px;
-            gap: 70px;
-        }
-    }
-}
-
-@media only screen and (max-width: 1650px){
-    .App{
-        > .window{
-            padding-left: 60px;
-            padding-right: 50px;
-            gap: 60px;
-        }
-    }
-}
-
-@media only screen and (max-width: 1450px){//break to two columns
-    .App{
-        > .window{
-            max-height: unset;
-            padding-left: 110px;
-            padding-right: 110px;
-            gap: 110px;
-        }
-    }
-}
-
-@media only screen and (max-width: 1400px){
-    .App{
-        > .window{
-            padding-left: 100px;
-            padding-right: 100px;
-            gap: 100px;
-        }
-    }
-}
-
-@media only screen and (max-width: 1350px){
-    .App{
-        > .window{
-            padding-left: 90px;
-            padding-right: 90px;
-            gap: 90px;
-        }
-    }
-}
-
-@media only screen and (max-width: 1250px){
-    .App{
-        > .window{
-            padding-left: 85px;
-            padding-right: 80px;
-            gap: 80px;
+            width: 600px;
+            position: relative;
+            > .infoContainer{
+                width: 600px;
+                padding: 80px 125px 80px 100px;
+                @include borderRadius(20px);
+                box-shadow: 3px 10px 35px #DDD;
+                position: fixed;
+                top: 53%;
+                @include transform(0, -50%);
+            }
         }
     }
 }
 
 //height:
-@media only screen and (max-height: 700px){
+@media only screen and (max-height: 950px){
     .App{
         > .window{
-            padding-top: 45px;
-            padding-bottom: 45px;
+            > .infoWrapper{
+                > .infoContainer{
+                    top: 55%;
+                }
+            }
         }
     }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media only screen and (min-width: 1550px){
-    @media only screen and (max-height: 720px){
-        // .App{
-        //     > .window{
-        //         top: 0;
-        //         @include transform(-50%, 0);
-        //         // > .headerFormWrapper{
-        //         //     flex: 1;
-        //         // }
-        //         // > .infoWrapper{
-        //         //     width: 480px;//checkIt
-        //         // }
-        //     }
-        // }
+@media only screen and (max-height: 850px){
+    .App{
+        > .window{
+            > .main{
+                > .headerWrapper{
+                    width: calc(100% + 12px);
+                }
+            }
+            > .infoWrapper{
+                > .infoContainer{
+                    top: 50%;
+                }
+            }
+        }
     }
 }
 
-@media only screen and (max-width: 1550px){
+@media only screen and (max-height: 780px){
+    .App{
+        > .window{
+            > .main{
+                > .formWrapper{
+                    margin-top: 25px;
+                }
+            }
+            > .infoWrapper{
+                > .infoContainer{
+                    padding-top: 60px;
+                    padding-bottom: 60px;
+                }
+            }
+        }
+    }
+}
 
-    // .App{
-    //     > .window{
-    //         position: sticky;
-    //         left: 0;
-    //         top: 0;
-    //         @include transform(0, 0);
-    //         // > .headerFormWrapper{
-    //         //     flex: 1;
-    //         // }
-    //         // > .infoWrapper{
-    //         //     width: 480px;//checkIt
-    //         // }
-    //     }
-    // }
+@media only screen and (max-height: 710px){
+    .App{
+        > .window{
+            padding-top: 50px;
+            > .main{
+                > .formWrapper{
+                    margin-top: 20px;
+                }
+            }
+            > .infoWrapper{
+                > .infoContainer{
+                    padding-top: 40px;
+                    padding-bottom: 40px;
+                }
+            }
+        }
+    }
+}
 
+@media only screen and (max-height: 680px){
+    .App{
+        > .window{
+            padding-top: 40px;
+        }
+    }
+}
+
+//width:
+@media only screen and (max-width: 1600px){
+    .App{
+        > .window{
+            > .infoWrapper{
+                width: 560px;
+                > .infoContainer{
+                    width: 560px;
+                    padding-left: 80px;
+                    padding-right: 100px;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1500px){
+    .App{
+        > .window{
+            > .infoWrapper{
+                width: 540px;
+                > .infoContainer{
+                    width: 540px;
+                    padding-left: 70px;
+                    padding-right: 90px;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1430px){
+    .App{
+        > .window{
+            padding-left: 100px;
+            padding-right: 85px;
+            gap: 90px;
+            > .infoWrapper{
+                width: 520px;
+                > .infoContainer{
+                    width: 520px;
+                    padding-left: 65px;
+                    padding-right: 85px;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1360px){
+    .App{
+        > .window{
+            padding-left: 90px;
+            padding-right: 75px;
+            gap: 80px;
+            > .infoWrapper{
+                width: 505px;
+                > .infoContainer{
+                    width: 505px;
+                    padding-left: 65px;
+                    padding-right: 80px;
+                }
+            }
+        }
+    }
 }
