--- a/src/stylesheets/_classes.scss
+++ b/src/stylesheets/_classes.scss
@@ -2,13 +2,13 @@ $buttonLightHover: rgba(0, 0, 0, 0.025);
 $buttonLightFocuse: rgba(0, 0, 0, 0.035);
 $buttonLightActived: rgba(0, 0, 0, 0.045);
 
-// add underline on urls:
+//add underline on urls:
 .hrefUnderline:hover,
 .hrefUnderline:focus{
     text-decoration: underline;
 }
 
-// change transparent background on events:
+//change transparent background on events:
 .transBackActeffect{
     transition: background-color 150ms;
 }
@@ -31,7 +31,7 @@ $buttonLightActived: rgba(0, 0, 0, 0.045);
      cursor: default;
 }
 
-// change colored background on events:
+//change colored background on events:
 .colorBackActeffect{
     transition: filter 100ms;
 }
@@ -50,14 +50,14 @@ $buttonLightActived: rgba(0, 0, 0, 0.045);
     }
 }
 
-// end text overflow with three dots:
+//end text overflow with three dots:
 .threeDotsOverflow{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
-// not selectable text:
+//not selectable text:
 .notSelectable{
     -webkit-tap-highlight-color: transparent; // Android Chrome
     -webkit-touch-callout:       none;        // iOS Safari
@@ -68,7 +68,7 @@ $buttonLightActived: rgba(0, 0, 0, 0.045);
     user-select:                 none;        // non-prefixed version, currently supported by Chrome and Opera
 }
 
-// selectable text:
+//selectable text:
 .selectableText{
     -webkit-touch-callout:  default; // iOS Safari
     -webkit-user-select:    text;    // Safari
@@ -79,9 +79,10 @@ $buttonLightActived: rgba(0, 0, 0, 0.045);
     cursor:                 text;    // general
 }
 
-// custom scrollbar:
+//custom scrollbar:
 .darkThinScrollbar::-webkit-scrollbar{
     width: 7px;
+    // height: 7px;
 }
 .darkThinScrollbar::-webkit-scrollbar-track{
     background: transparent;
@@ -90,7 +91,7 @@ $buttonLightActived: rgba(0, 0, 0, 0.045);
     background: #c4c4c4;
     border-radius: 20px;
 }
-// custom scrollbar:
+//custom scrollbar:
 .darkUltraThinScrollbar::-webkit-scrollbar{
     width: 4px;
 }
@@ -102,59 +103,15 @@ $buttonLightActived: rgba(0, 0, 0, 0.045);
     border-radius: 20px;
 }
 
-// none touch screen:
-.noneTouchScreen{
-    //light thin scrollbar:
-    .lightThinScrollbar::-webkit-scrollbar{
-        width: 3px;
-    }
-    .lightThinScrollbar::-webkit-scrollbar-track{
-        background: transparent;
-    }
-    .lightThinScrollbar::-webkit-scrollbar-thumb{
-        background: #CCC;
-        border-radius: 20px;
-    }
-    //light thick hidden scrollbar:
-    .lightThickHiddenScrollbar::-webkit-scrollbar{
-        width: 7px;
-        transition: all 200ms;
-    }
-    .lightThickHiddenScrollbar::-webkit-scrollbar-track{
-        background: transparent;
-    }
-    .lightThickHiddenScrollbar::-webkit-scrollbar-thumb{
-        background-color: transparent;
-        border-radius: 20px;
-    }
-    .lightThickHiddenScrollbar::-webkit-scrollbar-thumb:hover{
-        background-color: #CCC;
-    }
-    //dark thick scrollbar:
-    .darkThickScrollbar::-webkit-scrollbar{
-        width: 6px;
-    }
-    .darkThickScrollbar::-webkit-scrollbar-track{
-        background: transparent;
-    }
-    .darkThickScrollbar::-webkit-scrollbar-thumb{
-        background: #C2C2C2;
-        border-radius: 20px;
-    }
-    //dark super thin scrollbar:
-    .darkSuperThinScrollbar::-webkit-scrollbar{
-        width: 1px;
-    }
-    .darkSuperThinScrollbar::-webkit-scrollbar-track{
-        background: transparent;
-    }
-    .darkSuperThinScrollbar::-webkit-scrollbar-thumb{
-        background: #BBB;
-        border-radius: 20px;
+//not touch screen:
+.notTouchScreen{
+    @extend .darkThinScrollbar;
+    *{
+        @extend .darkThinScrollbar;
     }
 }
 
-// no scrollbar:
+//no scrollbar:
 .noScrollbar::-webkit-scrollbar{
     width: 0;
 }
@@ -162,13 +119,13 @@ $buttonLightActived: rgba(0, 0, 0, 0.045);
 //custom range input:
 .customRange{
     width: 100%;
-    -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
-    width: 100%; /* Specific width is required for Firefox. */
-    background: transparent; /* Otherwise white in Chrome */
+    -webkit-appearance: none; // hides the slider so that custom slider can be made */
+    width: 100%;              // specific width is required for Firefox. */
+    background: transparent;  // otherwise white in Chrome */
     border: none
 }
 .customRange:focus{
-    outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+    outline: none; // removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
 }
 .customRange::-webkit-slider-thumb{
     -webkit-appearance: none;
@@ -196,7 +153,7 @@ $buttonLightActived: rgba(0, 0, 0, 0.045);
     border-radius: 50%;
     cursor: pointer;
 }
-// the track:
+//the track:
 .customRange::-webkit-slider-runnable-track{
     width: 100%;
     height: 12px;
