--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -1,8 +1,208 @@
+.hrefUnderline:hover,
+.hrefUnderline:focus {
+  text-decoration: underline;
+}
+
+.transBackActeffect {
+  -webkit-transition: background-color 150ms;
+  transition: background-color 150ms;
+}
+
+.transBackActeffect:enabled:active {
+  background-color: rgba(0, 0, 0, 0.025) !important;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .transBackActeffect:enabled:hover {
+    background-color: rgba(0, 0, 0, 0.025) !important;
+  }
+  .transBackActeffect:enabled:focus {
+    background-color: rgba(0, 0, 0, 0.035) !important;
+  }
+  .transBackActeffect:enabled:active {
+    background-color: rgba(0, 0, 0, 0.045) !important;
+  }
+}
+
+.transBackActeffect:disabled {
+  opacity: 0.5;
+  cursor: default;
+}
+
+.colorBackActeffect {
+  -webkit-transition: -webkit-filter 100ms;
+  transition: -webkit-filter 100ms;
+  transition: filter 100ms;
+  transition: filter 100ms, -webkit-filter 100ms;
+}
+
+.colorBackActeffect:active {
+  -webkit-filter: brightness(95%);
+          filter: brightness(95%);
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .colorBackActeffect:hover {
+    -webkit-filter: brightness(95%);
+            filter: brightness(95%);
+  }
+  .colorBackActeffect:focus {
+    -webkit-filter: brightness(90%);
+            filter: brightness(90%);
+  }
+  .colorBackActeffect:active {
+    -webkit-filter: brightness(85%);
+            filter: brightness(85%);
+  }
+}
+
+.threeDotsOverflow, .Chart > .verticalColum > a {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.notSelectable {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.selectableText {
+  -webkit-touch-callout: default;
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+  cursor: text;
+}
+
+.darkThinScrollbar::-webkit-scrollbar, .notTouchScreen::-webkit-scrollbar, .notTouchScreen ::-webkit-scrollbar {
+  width: 7px;
+}
+
+.darkThinScrollbar::-webkit-scrollbar-track, .notTouchScreen::-webkit-scrollbar-track, .notTouchScreen ::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.darkThinScrollbar::-webkit-scrollbar-thumb, .notTouchScreen::-webkit-scrollbar-thumb, .notTouchScreen ::-webkit-scrollbar-thumb {
+  background: #c4c4c4;
+  border-radius: 20px;
+}
+
+.darkUltraThinScrollbar::-webkit-scrollbar {
+  width: 4px;
+}
+
+.darkUltraThinScrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.darkUltraThinScrollbar::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 20px;
+}
+
+.noScrollbar::-webkit-scrollbar {
+  width: 0;
+}
+
+.customRange {
+  width: 100%;
+  -webkit-appearance: none;
+  width: 100%;
+  background: transparent;
+  border: none;
+}
+
+.customRange:focus {
+  outline: none;
+}
+
+.customRange::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 16px;
+  width: 16px;
+  background-color: white;
+  border: 2px solid #027;
+  border-radius: 50%;
+  cursor: pointer;
+  margin-top: -7px;
+}
+
+.customRange::-moz-range-thumb {
+  height: 12px;
+  width: 12px;
+  background-color: white;
+  border: 2px solid #027;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.customRange::-ms-thumb {
+  height: 16px;
+  width: 16px;
+  background-color: white;
+  border: 2px solid #027;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.customRange::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 12px;
+  cursor: pointer;
+  border-top: solid 5px white;
+  border-bottom: solid 5px white;
+  margin-top: -1px;
+  margin-bottom: -1px;
+}
+
+.customRange::-moz-range-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: transparent;
+  border-top: solid 8px white;
+  border-bottom: solid 8px white;
+}
+
+.customRange::-ms-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: transparent;
+  border-top: solid 5px white;
+  border-bottom: solid 5px white;
+  border-color: transparent;
+  color: transparent;
+}
+
+.customRange::-ms-fill-lower {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: transparent;
+  border-top: solid 5px white;
+  border-bottom: solid 5px white;
+}
+
+.customRange::-ms-fill-upper {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: transparent;
+  border-top: solid 5px white;
+  border-bottom: solid 5px white;
+}
+
 .Chart {
   width: 100%;
-  max-width: 330px;
   height: 195px;
-  margin-top: 65px;
+  margin-top: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10,7 +210,7 @@
 
 .Chart > .verticalColum {
   height: 100%;
-  padding-right: 22px;
+  padding-right: 5px;
   padding-bottom: 23px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -25,6 +225,7 @@
 }
 
 .Chart > .verticalColum > a {
+  width: 40px;
   display: block;
   color: #bbb;
   font-size: 1.4rem;
@@ -78,16 +279,23 @@
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   background-color: #e8e8e8;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .Chart > .columsWrapper > .barWrapper > a > span.tallest {
   background-color: #a25;
 }
 
+.Chart > .columsWrapper > .barWrapper > a > span.lowest {
+  background-color: #5a5;
+}
+
 .Chart > .columsWrapper > .barWrapper > a:nth-child(2) {
   display: block;
   text-align: center;
-  padding-top: 9px;
+  margin-top: 7px;
+  padding-top: 2px;
   overflow: hidden;
 }
 /*# sourceMappingURL=Chart.css.map */
