--- a/src/components/Chart/Chart.scss
+++ b/src/components/Chart/Chart.scss
@@ -1,22 +1,24 @@
 @import '../../stylesheets/mixin';
+@import '../../stylesheets/classes';
 
 .Chart{
     width: 100%;
-    max-width: 330px;
     height: 195px;
-    margin-top: 65px;
+    margin-top: 60px;
     display: flex;
     > .verticalColum{
         height: 100%;
-        padding-right: 22px;
+        padding-right: 5px;
         padding-bottom: 23px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         > a{
+            width: 40px;
             display: block;
             color: #bbb;
             font-size: 1.4rem;
+            @extend .threeDotsOverflow;
         }
     }
     > .columsWrapper{
@@ -41,15 +43,20 @@
                     padding-top: 5px;
                     @include borderRadius(5px);
                     background-color: #e8e8e8;
+                    transition: all 0.5s ease;
                 }
                 > span.tallest{
                     background-color: #a25;
+                }
+                > span.lowest{
+                    background-color: #5a5;//todo?
                 }
             }
             > a:nth-child(2){
                 display: block;
                 text-align: center;
-                padding-top: 9px;
+                margin-top: 7px;
+                padding-top: 2px;
                 overflow: hidden;
             }
         }
